<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">心率广播lite</string>
    <string name="title">心率广播lite</string>
    <string name="heart_rate_label">心率</string>
    <string name="heart_rate_unit">BPM</string>
    <string name="no_heart_rate">--</string>
    <string name="start_broadcast">开启广播</string>
    <string name="stop_broadcast">停止广播</string>
    <string name="broadcasting">正在广播...</string>
    <string name="ble_not_supported">设备不支持BLE</string>
    <string name="permission_required">需要权限</string>
    <string name="settings_title">设置</string>
    <string name="auto_start_label">开机自启动</string>
    <string name="auto_start_hint">开启后，手表重启将自动恢复心率广播（需系统支持）</string>
    <string name="settings">设置</string>
</resources>
