<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/status_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/heartIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_heart"
        android:tint="@color/heart_rate_text"
        app:layout_constraintBottom_toTopOf="@+id/heartRateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/heartRateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/no_heart_rate"
        android:textColor="@color/heart_rate_text"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/unitText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartIcon"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/unitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heart_rate_unit"
        android:textColor="@color/unit_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/broadcastButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartRateText"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/broadcastButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/start_broadcast"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_broadcast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unitText"
        app:layout_constraintWidth_percent="0.55"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>
